--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://sanjaya:malli2001%40suddaBa5F8bf3123@mycluster.2tmrjxu.mongodb.net/?appName=myCluster
+MONGODB_URI=""
 PORT=3000
 
 JWT_SECRET=YOUR_VERY_SECRET_KEY_HERE
